[gd_scene load_steps=7 format=3 uid="uid://dovwvwmd44yof"]

[ext_resource type="Script" path="res://survivors_game.gd" id="1_lt3u8"]
[ext_resource type="PackedScene" uid="uid://cubvp4xm6vosd" path="res://player.tscn" id="1_mugp1"]
[ext_resource type="PackedScene" uid="uid://cwvcbb4gc6cth" path="res://tree.tscn" id="2_4cp71"]
[ext_resource type="PackedScene" uid="uid://b5rk4eu70hr6b" path="res://gun.tscn" id="2_c24xl"]
[ext_resource type="PackedScene" uid="uid://oc7kvbqac35o" path="res://rock.tscn" id="5_pit0a"]

[sub_resource type="Curve2D" id="Curve2D_d86yw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2378, -164, 0, 0, 0, 0, 2375, 503, 0, 0, 0, 0, 2378, 1170, 0, 0, 0, 0, 2383, 1565, 0, 0, 0, 0, -434, 1566, 0, 0, 0, 0, -434, -292, 0, 0, 0, 0, 2377, -262, 0, 0, 0, 0, 2371, -154)
}
point_count = 8

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_lt3u8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1914.0
offset_bottom = 1077.0
color = Color(0.188235, 0.411765, 0, 1)

[node name="AmmoLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -69.0
offset_right = 287.0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Ammo: 10"

[node name="Player" parent="." instance=ExtResource("1_mugp1")]
position = Vector2(866, 603)

[node name="Gun" parent="Player" instance=ExtResource("2_c24xl")]
position = Vector2(0, -47)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-866, -603)
curve = SubResource("Curve2D_d86yw")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(2378, -164)
rotation = 1.57529
scale = Vector2(-45.2157, 63.0149)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "Game Over"

[node name="Tree" parent="." instance=ExtResource("2_4cp71")]
position = Vector2(332, 858)

[node name="Tree2" parent="." instance=ExtResource("2_4cp71")]
position = Vector2(167, 246)

[node name="Tree3" parent="." instance=ExtResource("2_4cp71")]
position = Vector2(634, 465)

[node name="Tree4" parent="." instance=ExtResource("2_4cp71")]
position = Vector2(1329, 881)

[node name="Tree5" parent="." instance=ExtResource("2_4cp71")]
position = Vector2(1332, 296)

[node name="Tree6" parent="." instance=ExtResource("2_4cp71")]
position = Vector2(1656, 601)

[node name="Rock" parent="." instance=ExtResource("5_pit0a")]
position = Vector2(415, 620)

[node name="Rock2" parent="." instance=ExtResource("5_pit0a")]
position = Vector2(1111, 941)

[node name="Rock3" parent="." instance=ExtResource("5_pit0a")]
position = Vector2(1272, 535)

[node name="Rock4" parent="." instance=ExtResource("5_pit0a")]
position = Vector2(969, 279)

[node name="Rock5" parent="." instance=ExtResource("5_pit0a")]
position = Vector2(1688, 968)

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="fire" from="Player/Gun" to="." method="_on_gun_fire"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
